4th class: Retrofit.

--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,8 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    retrofitVersion = '2.3.0'
+    supportVersion  = '26.1.0'
+}
